--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "v-calendar": "next",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
