--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -10,18 +10,18 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "v-calendar": "next",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "@popperjs/core": "2.11.8",
+    "v-calendar": "3.1.2",
+    "vue": "3.4.6",
+    "vue-router": "4.2.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.3",
-    "vite": "^4.4.11"
+    "@rushstack/eslint-patch": "1.6.1",
+    "@vitejs/plugin-vue": "5.0.2",
+    "@vue/eslint-config-prettier": "9.0.0",
+    "eslint": "8.56.0",
+    "eslint-plugin-vue": "9.19.2",
+    "prettier": "3.1.1",
+    "vite": "5.0.11"
   }
 }
