--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.8",
+    "@tanstack/vue-table": "^8.17.3",
     "v-calendar": "3.1.2",
     "vue": "3.4.21",
     "vue-router": "4.3.0"
